--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,14 +6,15 @@
 # Edit .gitlab-ci/ci.template instead  #
 #                                      #
 # Regenerate with:
-#   TEMPLATE_SHA="$(sed -n 's/^.templates_sha: *\&template_sha *\([0-9a-f]\+\) .*/\1/p' ./.gitlab-ci/ci.template)"
+#   TEMPLATE_SHA="$(sed -n 's/^.templates_sha: *\&template_sha *\([0-9a-f]\+\)$/\1/p' ./.gitlab-ci/ci.template)"
 #   pip3 install "git+http://gitlab.freedesktop.org/freedesktop/ci-templates@$TEMPLATE_SHA"
 #   ci-fairy generate-template
 #
 ########################################
 
 
-.templates_sha: &template_sha fb33e1b244ec2a0b8edf8ee5590a96369c3b4666 # see https://docs.gitlab.com/ee/ci/yaml/#includefile
+# see https://docs.gitlab.com/ee/ci/yaml/#includefile
+.templates_sha: &template_sha 184ca628f89f3193c249b4e34e45afee2773a833
 
 
 
@@ -56,11 +57,11 @@ variables:
   #
   # This is done by running `ci-fairy generate-template` and possibly bumping
   # ".default_tag".
-  ALPINE_TAG:  'tag-17df8b214d94'
-  CENTOS_TAG:  'tag-39222307a199'
-  DEBIAN_TAG:  'tag-7daf9b9bc6e4'
-  FEDORA_TAG:  'tag-39222307a199'
-  UBUNTU_TAG:  'tag-7daf9b9bc6e4'
+  ALPINE_TAG:  'tag-3c44b17230c3'
+  CENTOS_TAG:  'tag-a6311164b42c'
+  DEBIAN_TAG:  'tag-7f291c2d3f4d'
+  FEDORA_TAG:  'tag-a6311164b42c'
+  UBUNTU_TAG:  'tag-7f291c2d3f4d'
 
   ALPINE_EXEC: 'bash .gitlab-ci/alpine-install.sh'
   CENTOS_EXEC: 'bash .gitlab-ci/fedora-install.sh'
