--- a/.gitlab-ci/ci.template
+++ b/.gitlab-ci/ci.template
@@ -8,14 +8,15 @@
 # Edit .gitlab-ci/ci.template instead  #
 #                                      #
 # Regenerate with:
-#   TEMPLATE_SHA="$(sed -n 's/^.templates_sha: *\&template_sha *\([0-9a-f]\+\) .*/\1/p' ./.gitlab-ci/ci.template)"
+#   TEMPLATE_SHA="$(sed -n 's/^.templates_sha: *\&template_sha *\([0-9a-f]\+\)$/\1/p' ./.gitlab-ci/ci.template)"
 #   pip3 install "git+http://gitlab.freedesktop.org/freedesktop/ci-templates@$TEMPLATE_SHA"
 #   ci-fairy generate-template
 #
 ########################################
 
 
-.templates_sha: &template_sha fb33e1b244ec2a0b8edf8ee5590a96369c3b4666 # see https://docs.gitlab.com/ee/ci/yaml/#includefile
+# see https://docs.gitlab.com/ee/ci/yaml/#includefile
+.templates_sha: &template_sha 184ca628f89f3193c249b4e34e45afee2773a833
 
 {# Group distros by their common (name,) tuples.#}
 {% set distro_groups = [] %}
