tui: Enable/disable Wi-Fi and WWAN radios
This commit adds functionality to nmtui to enable or disable the Wi-Fi
and WWAN radios. Additionally, it provides a display of the hardware
status.

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/merge_requests/1655

--- a/Makefile.am
+++ b/Makefile.am
@@ -5200,6 +5200,8 @@ src_nmtui_nmtui_SOURCES = \
 	src/nmtui/nmtui-edit.h \
 	src/nmtui/nmtui-hostname.c \
 	src/nmtui/nmtui-hostname.h \
+	src/nmtui/nmtui-radio.c \
+	src/nmtui/nmtui-radio.h \
 	\
 	src/nmtui/nm-editor-bindings.c \
 	src/nmtui/nm-editor-bindings.h \
