--- a/.gitlab-ci/ci.template
+++ b/.gitlab-ci/ci.template
@@ -9,14 +9,14 @@
 #                                      #
 # Regenerate with:
 #   TEMPLATE_SHA="$(sed -n 's/^.templates_sha: *\&template_sha *\([0-9a-f]\+\)$/\1/p' ./.gitlab-ci/ci.template)"
-#   pip3 install "git+http://gitlab.freedesktop.org/freedesktop/ci-templates@$TEMPLATE_SHA"
+#   pip3 install "git+http://gitlab.freedesktop.org/thaller/ci-templates@$TEMPLATE_SHA"
 #   ci-fairy generate-template
 #
 ########################################
 
 
 # see https://docs.gitlab.com/ee/ci/yaml/#includefile
-.templates_sha: &template_sha 184ca628f89f3193c249b4e34e45afee2773a833
+.templates_sha: &template_sha 0c3f682516663e131843df9f7fcade654f6285bc
 
 {# Group distros by their common (name,) tuples.#}
 {% set distro_groups = [] %}
@@ -39,7 +39,7 @@
 include:
 {% for distro_group in distro_groups|sort(attribute='name') %}
   # {{ distro_group.name.capitalize() }} container builder template
-  - project: 'freedesktop/ci-templates'
+  - project: 'thaller/ci-templates'
     ref: *template_sha
     file: '/templates/{{distro_group.name}}.yml'
 {% endfor %}
