--- a/meson.build
+++ b/meson.build
@@ -694,6 +694,7 @@ default_paths = ['/sbin', '/usr/sbin']
 progs = [['iptables', default_paths, '/usr/sbin/iptables'],
          ['nft',      default_paths, '/usr/sbin/nft'],
          ['dnsmasq',  default_paths, ''],
+         ['modprobe', default_paths, '/sbin/modprobe']
         ]
 
 foreach prog : progs
@@ -1071,6 +1072,7 @@ output += '\n'
 output += '  jansson: ' + jansson_msg + '\n'
 output += '  iptables: ' + config_h.get('IPTABLES_PATH') + '\n'
 output += '  nft: ' + config_h.get('NFT_PATH') + '\n'
+output += '  modprobe: ' + config_h.get('MODPROBE_PATH') + '\n'
 output += '  modemmanager-1: ' + enable_modem_manager.to_string() + '\n'
 if enable_modem_manager
   output += '  mobile-broadband-provider-info-database: ' + mobile_broadband_provider_info_database + '\n'
