--- a/Makefile.am
+++ b/Makefile.am
@@ -5522,6 +5522,7 @@ EXTRA_DIST += \
 	src/tests/client/test-client.check-on-disk/test_003.expected \
 	src/tests/client/test-client.check-on-disk/test_004.expected \
 	src/tests/client/test-client.check-on-disk/test_offline.expected \
+	src/tests/client/test-client.check-on-disk/test_version_warn.expected \
 	\
 	src/tests/client/meson.build \
 	$(NULL)
