tools: nm-in-vm: fix connectivity with host
The connectivity with the host depends on getting a DHCP lease from the
host. With the latest commit's customizations, the virtual NIC is not
managed by NM so it is not configured.

Keep it unmanaged so debuging NetworkManager doesn't affect to this
virtual NIC. Use dhclient to get a DHCP lease from the host. Assign a
fixed interface name (host_net) to match it from NM and dhclient config
files.

--- a/tools/nm-guest-data/nm-90-my.conf.in
+++ b/tools/nm-guest-data/nm-90-my.conf.in
@@ -13,3 +13,7 @@ managed=0
 [device-managed-1]
 match-device=interface-name:net*,interface-name:eth*
 managed=1
+
+[device-host-net]
+match-device=interface-name:host_net
+managed=0
