tools: nm-in-vm: Debian/Ubuntu with extra pkgs and fixed installation

--- a/tools/nm-guest-data/systemd-dhcp-host.service.in
+++ b/tools/nm-guest-data/systemd-dhcp-host.service.in
@@ -7,7 +7,7 @@ Type=simple
 Restart=on-failure
 User=root
 RestartSec=5
-ExecStart=dhclient -d -H "%H" host_net
+ExecStart=dhclient -d host_net
 ExecStop=dhclient -r host_net
 
 [Install]
