libnm/docs: fix building libnm documentation with meson
Currently, the libnm documentation fails to build with meson due to meson replacing backslashes with slashes.
This commit introduces a workaround -- replacing the `ignore_decorators` RegEx with an equivalent one that does not use backslashes.

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/merge_requests/1717

--- a/docs/libnm/meson.build
+++ b/docs/libnm/meson.build
@@ -27,7 +27,7 @@ private_headers = [
 scan_args = [
   '--rebuild-types',
   '--rebuild-sections',
-  '--ignore-decorators=NM_AVAILABLE_IN_\d+_\d+|NM_DEPRECATED_IN_\d+_\d+|NM_DEPRECATED_IN_\d+_\d+_FOR\(\)',
+  '--ignore-decorators=NM_AVAILABLE_IN_[0-9]+_[0-9]+|NM_DEPRECATED_IN_[0-9]+_[0-9]+|NM_DEPRECATED_IN_[0-9]+_[0-9]+_FOR[(][)]',
   '--ignore-headers=' + ' '.join(private_headers),
 ]
 
