tools: nm-in-vm: fix motd
Message of the day was shown twice because the same bashrc.my file than
for containers was used. That file contained some code to show motd in
the container, where it is not shown by default. But in the VM, the motd
is shown by default, so it was shown twice.

Move the code to show motd to a file used only by nm-in-container and
not by nm-in-vm.

Also, modify the explanation about using prepare-for-system.sh because
it's only valid for Fedora but nm-in-vm can be used with other SOs too.

--- a/tools/nm-guest-data/etc-motd-vm.in
+++ b/tools/nm-guest-data/etc-motd-vm.in
@@ -55,7 +55,7 @@ For example, configure NetworkManager with
 Test with:
   $ systemctl stop NetworkManager; /opt/test/sbin/NetworkManager --debug 2>&1 | tee -a /tmp/nm-log.txt
 
-Or better, configure with `contrib/fedora/rpm/configure-for-system.sh`,
+Or better, if using Fedora, configure with `contrib/fedora/rpm/configure-for-system.sh`,
 subsequent `make && make install` will overwrite your system's NetworkManager,
 and you can test it with `systemctl daemon-reload ; systemctl restart NetworkManager`.
 
